--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
+
     <uses-feature android:name="android.hardware.camera" />
+
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -16,6 +21,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WildNest"
         tools:targetApi="31">
+        <activity
+            android:name=".screen.CameraScreen"
+            android:exported="false"
+            android:label="@string/title_activity_camera_screen"
+            android:theme="@style/Theme.WildNest" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
